# FIB-EDA-Joc

./: .clang-format  .gitignore  AIDemo.cc  AINull.cc  AIjormaig.cc  AIjormaig_v1.0.cc  AIjormaig_v1.1.cc  Action.cc  Board.cc  Board.hh  CMakeLists.txt  CMakePresets.json  Game  Game.hh  Main.cc  Makefile  Makefile.deps  Player.hh  README.md  README.txt  Utils.hh  a  default.cnf  default.res  err.txt  jocEda.creator.user.2.7pre1  jocEda.files  jocEda.includes  match11.cnf  match12.cnf  match13.cnf  match15.cnf  match17.cnf  match20.cnf  match4.cnf  match6.cnf  match7.cnf  match9.cnf
Jugadors Acabats/: AIjormaig_v1_0.cc  AIjormaig_v1_1.cc  AIjormaig_v1_2.cc  AIjormaig_v1_3.cc  AIjormaig_v1_4.cc  AIjormaig_v1_4.cc~  AIjormaig_v1_5.cc  AIjormaig_v1_6.cc  AIjormaig_v1_7.cc  AIjormaig_v2_0.cc  AIjormaig_v2_1.cc  AIjormaig_v2_2.cc  AIjormaig_v2_3.cc  AIjormaig_v2_4.cc  Especificacions.txt
Jugadors Bons/: AIjormaig.cc  AIjormaig_v1.0.cc  AIjormaig_v1.1.cc  AIjormaig_v1.2.cc  Especificacions.txt
Mapes/: match10.cnf  match16.cnf  match19.cnf  match2.cnf  match3.cnf  match8.cnf
Partides/: Esteve vs Joan 001
Tmp/: viewer.js
Tmp/img/: dot.fig
Viewer/: viewer.html
Viewer/img/: helicopter.+.fig  helicopter.x.fig  square.fig  square0.000085.fig  (+2 more)
finished/: aijormaig_v1_0.cpp  aijormaig_v1_1.cpp  aijormaig_v1_2.cpp  aijormaig_v1_3.cpp  aijormaig_v1_4.cpp  aijormaig_v1_5.cpp  aijormaig_v1_6.cpp  aijormaig_v1_7.cpp  aijormaig_v2_0.cpp  aijormaig_v2_1.cpp  aijormaig_v2_2.cpp  aijormaig_v2_3.cpp  aijormaig_v2_4.cpp
maps/: match1.cnf  match18.cnf  match5.cnf
(+19 files in other folders)
